<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/set_audiobooks">

    <PreferenceCategory app:title="@string/set_audiobook_local_library">
        <com.auralis.player.settings.ui.IntListPreference
            app:defaultValue="0"
            app:entries="@array/entries_audiobook_folder_organization"
            app:entryValues="@array/values_audiobook_folder_organization"
            app:key="@string/set_key_audiobook_folder_organization"
            app:summary="@string/set_audiobook_folder_organization_desc"
            app:title="@string/set_audiobook_folder_organization" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/set_key_audiobook_selected_folders_enabled"
            app:summary="@string/set_audiobook_selected_folders_enabled_desc"
            app:title="@string/set_audiobook_selected_folders_enabled" />

        <MultiSelectListPreference
            app:key="@string/set_key_audiobook_selected_folders"
            app:summary="@string/set_audiobook_selected_folders_desc"
            app:title="@string/set_audiobook_selected_folders" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_audiobook_playback">
        <com.auralis.player.settings.ui.IntListPreference
            app:defaultValue="30"
            app:entries="@array/entries_audiobook_skip_duration"
            app:entryValues="@array/values_audiobook_skip_duration"
            app:key="@string/set_key_audiobook_skip_duration"
            app:summary="@string/set_audiobook_skip_duration_desc"
            app:title="@string/set_audiobook_skip_duration" />

        <com.auralis.player.settings.ui.IntListPreference
            app:defaultValue="100"
            app:entries="@array/entries_audiobook_default_speed"
            app:entryValues="@array/values_audiobook_default_speed"
            app:key="@string/set_key_audiobook_default_speed"
            app:summary="@string/set_audiobook_default_speed_desc"
            app:title="@string/set_audiobook_default_speed" />

        <com.auralis.player.settings.ui.IntListPreference
            app:defaultValue="2"
            app:entries="@array/entries_audiobook_auto_rewind"
            app:entryValues="@array/values_audiobook_auto_rewind"
            app:key="@string/set_key_audiobook_auto_rewind"
            app:summary="@string/set_audiobook_auto_rewind_desc"
            app:title="@string/set_audiobook_auto_rewind" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="@string/set_key_audiobook_skip_silence"
            app:summary="@string/set_audiobook_skip_silence_desc"
            app:title="@string/set_audiobook_skip_silence" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/set_key_audiobook_shake_reset"
            app:summary="@string/set_audiobook_shake_reset_desc"
            app:title="@string/set_audiobook_shake_reset" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/set_key_audiobook_sleep_fade_out"
            app:summary="@string/set_audiobook_sleep_fade_out_desc"
            app:title="@string/set_audiobook_sleep_fade_out" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/set_audiobook_appearance">
        <com.auralis.player.settings.ui.IntListPreference
            app:defaultValue="0"
            app:entries="@array/entries_audiobook_library_presentation"
            app:entryValues="@array/values_audiobook_library_presentation"
            app:key="@string/set_key_audiobook_library_presentation"
            app:summary="@string/set_audiobook_library_presentation_desc"
            app:title="@string/set_audiobook_library_presentation" />
    </PreferenceCategory>
</PreferenceScreen>
