<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/lbl_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/lbl_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_switch_library_mode"
        android:title="@string/lbl_switch_library_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_audiobook_chapters"
        android:title="@string/lbl_add_audiobook_chapters"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/set_root_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/lbl_about"
        app:showAsAction="never" />
</menu>