<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:transitionGroup="true"
    tools:context=".settings.AboutFragment">

    <com.auralis.player.ui.CoordinatorAppBarLayout
        android:id="@+id/about_appbar"
        style="@style/Widget.Auralis.AppBarLayout"
        app:liftOnScroll="true">

        <com.auralis.player.ui.AuralisToolbar
            android:id="@+id/about_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="@string/lbl_about" />

    </com.auralis.player.ui.CoordinatorAppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/about_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/spacing_medium">

                <ImageView
                    android:id="@+id/about_auralis_icon"
                    style="@style/Widget.Auralis.Image.Small"
                    android:contentDescription="@string/desc_auralis_icon"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/about_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/info_app_name"
                    android:textAppearance="?attr/textAppearanceTitleLargeEmphasized" />

                <TextView
                    android:id="@+id/about_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:gravity="center"
                    android:text="@string/info_app_desc"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/lbl_version"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:id="@+id/about_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    tools:text="4.1.6" />

                <TextView
                    android:id="@+id/about_code"
                    style="@style/Widget.Auralis.TextView.Icon.Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/lbl_code"
                    app:drawableStartCompat="@drawable/ic_code_24" />

                <TextView
                    android:id="@+id/about_licenses"
                    style="@style/Widget.Auralis.TextView.Icon.Clickable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_licenses"
                    app:drawableStartCompat="@drawable/ic_license_24" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
